fixes overflow of row with long names

--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -164,6 +164,10 @@
   .preserve-3d {
     transform-style: preserve-3d;
   }
+
+  .break-anywhere {
+    overflow-wrap: anywhere;
+  }
 }
 
 /* PRINT */
